syntax = "proto3";
option csharp_namespace = "InWords.Protobuf";

option java_multiple_files = true;
option java_package = "ru.inwords.inwords.proto.profile";
option java_outer_classname = "ProfileProto";


package ProfilePackage.v2;
import "Common.v2.proto";
// The Profile service definition.
service Profile {
	rpc Current (Common.v2.Empty) returns (ProfileReply); // to be implemented
	rpc Update (UpdateRequest) returns (Common.v2.Empty); // to be implemented
	rpc FindId (FindIdRequest) returns (PublicProfile); // to be implemented
	rpc FindNickname (FindUsernameRequest) returns (ProfilesReply); // to be implemented
	rpc RequestEmailUpdate (EmailChangeRequest) returns (EmailChangeReply);
	rpc ConfirmEmail (ConfirmEmailRequest) returns (ConfirmEmailReply);
	rpc ConfirmEmailLink (ConfirmEmailLinkRequest) returns (ConfirmEmailReply);
	rpc DeleteAccount (DeleteAccountRequest) returns (Common.v2.Empty);
}

message UpdateRequest{
	string nickName = 1;
}

message ProfileReply{
	int32 userId = 1;
	string nickName = 2;
	int32 experience = 3;
	string lastLogin = 4;
	string role = 5;
	string registrationDate = 6;
	string email = 7;
	string avatarPath = 8;
}

message PublicProfile {
	int32 userId = 1;
	string nickName = 2;
	int32 experience = 3;
	string lastLogin = 4;
	string registrationDate = 5;
	string avatarPath = 6;
}

message ProfilesReply{
	repeated PublicProfile Users = 1;
}

message FindIdRequest{
	int32 userId = 1;
}

message FindUsernameRequest{
	string UserName = 1;
}

// The response message containing the Token.
message EmailChangeRequest{
	string email = 1;
}

message EmailChangeReply{
	string email = 1;
}

message ConfirmEmailRequest{
	string email = 1;
	int32 code = 2;
}

message ConfirmEmailLinkRequest{
	string activationGuid = 1;
}

message ConfirmEmailReply{
	string email = 1;
}

message DeleteAccountRequest{
	string text = 1; 
}